==> wbasser/CommonSoftwareFramework/HAL/Zephyr/UART/Core/Trunk/Uart.c <==
#include <drivers/uart.h>
#include <hal/nrf_uart.h>
#include "UART/Uart.h"
  #include "DebugManager/DebugManager.h"
#define BUFCTL_SIZE   sizeof( BUFCTL )
#define LCLCTL_SIZE   sizeof( LCLCTL )

BOOL Uart_Initialize( void )
{
  PUARTDEF                    ptDef;
  PLCLCTL                     ptCtl;
  U16                         wBaudRate;
  UARTDEVENUM                 eDev;
  S32                         lRet;
  struct uart_config          uartCfg;
  BOOL                        bRet = FALSE;


  // for each defined UART
  for ( eDev = 0; eDev < UART_DEV_ENUM_MAX; eDev++ )
  {
    // get pointer to the definition/control structures
    ptDef = ( PUARTDEF )&g_atUartDefs[ eDev ];
    ptCtl = &atUartLclCtls[ eDev ];

    // clear the receive/transmit buffers
    ptCtl->tRxBuf.wWrIdx = ptCtl->tRxBuf.wRdIdx = ptCtl->tRxBuf.wCount = 0;
    ptCtl->tTxBuf.wWrIdx = ptCtl->tTxBuf.wRdIdx = ptCtl->tTxBuf.wCount = 0;

    ptCtl->ptUart = device_get_binding( ptDef->pcName );

    uartCfg.baudrate  = ptDef->uBaudRate;
    uartCfg.parity    = UART_CFG_PARITY_NONE;
    uartCfg.stop_bits = UART_CFG_STOP_BITS_1;
    uartCfg.data_bits = UART_CFG_DATA_BITS_8;
    uartCfg.flow_ctrl = UART_CFG_FLOW_CTRL_RTS_CTS;

    if (ptCtl->ptUart != NULL)
    {
      lRet = uart_configure(ptCtl->ptUart, &uartCfg);
      if (lRet != 0)
      {
        bRet = TRUE;
      }

      // Pass the UART dev enum into the *user_data field
      uart_callback_set(ptCtl->ptUart, ZephyrUartCallback, &eDev);

      #if ( UART_DMA_ASYNC_IN_USE == ON )
      memset(sRxData.pBufA, 0, sRxData.wBufLen);
      memset(sRxData.pBufB, 0, sRxData.wBufLen);

      sRxData.pActiveBuf = sRxData.pBufA;
      sRxData.pNextBuf = sRxData.pBufB;
      
      // uart_rx_enable(ptCtl->ptUart, sRxData.pActiveBuf, 
      //                sRxData.wBufLen, UART_RX_TIMEOUT_MS);
      #else
      // uart_rx_enable(ptCtl->ptUart, ptDef->pnRxBuffer, 
      //                ptDef->wRxBufSize, UART_RX_TIMEOUT_MS);
      
      #endif


    }
  }

  return( bRet );
}

void Uart_CloseAll( void )
{
  PUARTDEF                    ptDef;
  UARTDEVENUM                 eDev;
  PLCLCTL                     ptCtl;
  
  // for each defined UART
  for ( eDev = 0; eDev < UART_DEV_ENUM_MAX; eDev++ )
  {
    // get pointer to the definition/control structures
    ptDef = ( PUARTDEF )&g_atUartDefs[ eDev ];
    ptCtl = &atUartLclCtls[ eDev ];

    // First, ensure that any ongoign transmissions are stopped
    uart_tx_abort(ptCtl->ptUart);

    // Now disable receiving
    uart_rx_disable(ptCtl->ptUart);

  }

  return;
}

UARTERR Uart_Write( UARTDEVENUM eDev, PU8 pnData, U16 wLength, PU16 pwBytesWritten )
{
  UARTERR             eError = UART_ERR_NONE;
  PUARTDEF            ptDef;
  PLCLCTL             ptCtl;
  U16                 wBytesRemaining;
  U8                  sendAmount = 0; 
  S32                 lWriteRet = 0;
 
  // check for a valid UART
  if ( eDev < UART_DEV_ENUM_MAX )
  {
    // get pointers to the control/def structure
    ptDef = ( PUARTDEF )&g_atUartDefs[ eDev ];
    ptCtl = &atUartLclCtls[ eDev ];
    
    ptCtl->tTxBuf.pnTxBuf = pnData;
    wBytesRemaining = wLength; 
    ptCtl->tTxBuf.wCount = 0; // We're going to use this to count the sent bytes
    ptCtl->tTxBuf.wWrIdx = 0;

    sendAmount = ((wLength > UART_TX_LIMIT_BYTES) ? UART_TX_LIMIT_BYTES : wLength);

    // Do a blocking while loop her to frce out all the data
    while (ptCtl->tTxBuf.wCount < wLength)
    {     
      

      lWriteRet = uart_tx( ptCtl->ptUart, ptCtl->tTxBuf.pnTxBuf + ptCtl->tTxBuf.wWrIdx
                          , sendAmount, UART_TX_TIMEOUT_MS * 1000);
    
      if (lWriteRet == -EBUSY)
      {
        if(k_sem_take(&tx_done, K_MSEC(UART_TX_TIMEOUT_MS)) != 0) 
        {
          uart_tx_abort(ptCtl->ptUart);
          k_sem_take(&tx_done, K_MSEC(UART_TX_TIMEOUT_MS));
        }
      }

      wBytesRemaining = wLength - ptCtl->tTxBuf.wCount;
      sendAmount = ((wBytesRemaining > UART_TX_LIMIT_BYTES) ? UART_TX_LIMIT_BYTES : wBytesRemaining);
    }

    // Even on an abort the count will be updated so this is valid 
    *pwBytesWritten += ptCtl->tTxBuf.wCount;

  }
  else
  {
    // illegal device
    eError = UART_ERR_ILLDEV;
  }
  
  // return the error
  return( eError );
}

UARTERR Uart_Close( UARTDEVENUM eDev )
{
  UARTERR       eError = UART_ERR_NONE;
  PUARTDEF                    ptDef;
  PLCLCTL                     ptCtl;

  // check for a valid UART
  if ( eDev < UART_DEV_ENUM_MAX )
  {

    ptDef = ( PUARTDEF )&g_atUartDefs[ eDev ];
    ptCtl = &atUartLclCtls[ eDev ]; 

    // First, ensure that any ongoign transmissions are stopped
    uart_tx_abort(ptCtl->ptUart);

    // Now disable receiving
    uart_rx_disable(ptCtl->ptUart);
  }
  else
  {
    // illegal device
    eError = UART_ERR_ILLDEV;
  }
  
  // return the error
  return( eError );
}

static void IrqCommonHandler( UARTDEVENUM eDev )
{
  PUARTDEF                  ptDef;
  PLCLCTL                   ptCtl;
  U8                        nOption;
  PVUARTINTCALLBACK         pvCallBack;
  U32                       uIntFlags;
  UARTIRQEVENTS             eEvent = UART_IRQ_EVENT_NONE;
  
  // get pointer to the definition/control structures
  ptDef = ( PUARTDEF )&g_atUartDefs[ eDev ];
  ptCtl = &atUartLclCtls[ eDev ];
  
  // get the callback
  pvCallBack = ptDef->pvCallback;
  
}
